# FurBot

./: README.md
furbot_description/: CMakeLists.txt  package.xml
furbot_description/launch/: view.launch.py  view.py
furbot_description/rviz/: model.rviz
furbot_description/urdf/: furbot.urdf
furbot_simulation/: CMakeLists.txt  README.md  package.xml
furbot_simulation/launch/: simulation.launch.py  simulation.py
furbot_simulation/protos/: README.md  furbot.proto
furbot_simulation/resource/: furbot_webots.urdf  ros2control.yml
furbot_simulation/worlds/: world.wbt
